[package]
name = "wuwa-modloader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["ron", "serde"] }
image = { version = "0.25.1", features = [
  "ico",
  "png",
], default-features = false }
rfd = "0.14.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[features]
epic = []
kuro = []
persistence = []
